# local-jarvis

./: .gitignore  Deep Research.bat  Deskbot UI.bat  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
deskbot/: __main__.py  agent.py  chess_game.py  cli.py  config.py  doctor.py  llm.py  logging_setup.py  memory.py  paths.py  persona.py  research.py  resolver.py  routine_runner.py  routines.py  scheduler.py  teach.py  watch_kiosk.py
deskbot/defaults/: config.yaml
deskbot/defaults/personas/: friend.yaml
deskbot/tools/: __init__.py  apps.py  browser.py  safety.py  shell.py  youtube.py
deskbot/webui/: generate_license.py  jobs.py  licensing.py  server.py  watch.py
deskbot/webui/static/: app.js  index.html  style.css  watch.css  watch.html  watch.js
tests/: conftest.py  test_chess_smoke.py  test_phase1_smoke.py  test_phase2_smoke.py  test_phase3_smoke.py  test_phase_research_smoke.py  test_resolver.py  test_watch.py  test_webui_jobs.py  test_webui_smoke.py
