[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskbot"
version = "0.1.0"
description = "Local Jarvis-style CLI agent: Ollama brain + tool hands"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0",
  "rich>=13.7",
  "psutil>=5.9",
  "platformdirs>=4.2",
  "playwright>=1.44",
  "chess>=1.10",
  "questionary>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "cryptography>=42.0",
  "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "httpx2>=2.0"]
vision = ["mss>=9.0", "opencv-python>=4.9", "rapidocr-onnxruntime>=1.3", "pydirectinput>=1.0.4"]

[project.scripts]
deskbot = "deskbot.cli:main"

[tool.setuptools]
packages = ["deskbot"]
